styles: added class ".display-none", fixed overflow of table

--- a/src/style.scss
+++ b/src/style.scss
@@ -8,6 +8,10 @@ gh-study-journal {
         justify-content: space-between;
         align-items: center;
 
+        &.display-none {
+            display: none;
+        }
+
         .icon-button {
             &:has(span) {
                 -moz-box-flex: 0;
@@ -76,13 +80,11 @@ gh-study-journal {
                 direction: ltr;
 
                 svg {
-                    // .mbsc-icon>svg {
-                        fill: currentColor;
-                        display: block;
-                        height: 100%;
-                        margin: 0 auto;
-                        width: 100%;
-                    // }
+                    fill: currentColor;
+                    display: block;
+                    height: 100%;
+                    margin: 0 auto;
+                    width: 100%;
                 }
             }
         }
@@ -100,38 +102,21 @@ gh-study-journal {
         .colHeader {
             transform: rotate(270deg) translateX(-10px);
         }
-        
-        .ht_clone_top {
-            .wtHolder {
-                overflow: visible;
-            }
-        }
-
-        .ht_clone_inline_start {
-            .wtHolder {
-                overflow: visible;
-            }
-        }
 
         .ht_master {
             .wtHolder {
                 &::-webkit-scrollbar-track {
-                    // -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
-                    // border-radius: 4px;
-                    // background-color: #F5F5F5;
                     background: #f1f1f1;
                 }
         
                 &::-webkit-scrollbar {
-                    width: 8px;
-                    height: 8px;
+                    width: 16px;
+                    height: 16px;
                     background-color: #F5F5F5;
                 }
         
                 &::-webkit-scrollbar-thumb {
-                    // border-radius: 4px;
-                    // -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,.2);
-                    // background-color: #acacac;
+                    border-radius: 3px;
                     background: #b9b9b9;
 
                     &:hover {
